# Nest

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Bird/: CMakeLists.txt
Bird/include/Bird/: Base.hpp  Bird.hpp  BirdStates.hpp  Config.hpp  PlatformData.hpp  VertexBufferLayoutData.hpp
Bird/src/Bird/: Bird.cpp  Bird_p.hpp  GraphicsContext.hpp  HandleAllocator.hpp  PlatformData.cpp  RendererI.hpp
Bird/src/Bird/Encoder/: Frame.cpp  Frame.hpp  RenderDraw.hpp  RendererCommand.hpp  Uniform.hpp  UniformBuffer.hpp  View.hpp
Examples/Atoms/: CMakeLists.txt  README.md
Examples/Atoms/native/OSX/: Info.plist
Examples/Atoms/resources/Shaders/: fstCircle.glsl
Examples/Atoms/src/: AtomsGameLevel.cpp  AtomsGameLevel.hpp  BaseNetwork.hpp  Client.cpp  Client.hpp  Main.cpp  Player.cpp  Player.hpp  Server.cpp  Server.hpp  StartMenu.cpp  StartMenu.hpp
Examples/ContentBrowser/: CMakeLists.txt  README.md
Examples/ContentBrowser/native/OSX/: Info.plist
Examples/ContentBrowser/src/: ContentBrowser.cpp  ContentBrowser.hpp  ContentBrowserLevel.cpp  ContentBrowserLevel.hpp  Main.cpp  Panel.cpp  Panel.hpp  main.cpp
Examples/ContentBrowser/src/SystemTools/: LinuxTools.cpp  LinuxTools.hpp  MacOSTools.cpp  MacOSTools.hpp  SystemTools.hpp  WindowsTools.cpp  WindowsTools.hpp
Examples/NestPBR/: CMakeLists.txt  README.md  main.cpp
Examples/NestPBR/native/IOS/: Info.plist
Examples/NestPBR/native/OSX/: Info.plist
Examples/NestPBR/res/Shaders/: fstDefaultCube.glsl  fstSphere.glsl  gstCube-c.glsl
Examples/NestPBR/resources/Shaders/: fstCube.glsl  fstSky.glsl  fstSphere.glsl  vstCube.glsl  vstSky.glsl
Examples/NestPBR/src/: CameraMove.cpp  CameraMove.hpp  Cube.cpp  Cube.hpp  CubeRenderer.cpp  CubeRenderer.hpp  Figure.hpp  Main.cpp  NestPBR.cpp  NestPBR.hpp  SkyComponent.cpp  SkyComponent.hpp  Sphere.cpp  Sphere.hpp  SphereRenderer.cpp  SphereRenderer.hpp
Examples/Profiler/: CMakeLists.txt  README.md  main.cpp
Examples/Profiler/native/OSX/: Info.plist
Examples/Profiler/res/Shaders/: vstCube.glsl
Examples/Profiler/resources/Shaders/: fstSky.glsl  vstDefaultCube.glsl  vstSky.glsl  vstSphere.glsl
Examples/Profiler/src/: Main.cpp  Profiler.cpp  Profiler.hpp  ProfilerTest.cpp  ProfilerTest.hpp
Examples/Profiler/src/Profiler/: AppInfo.hpp  NestProfiler.cpp  NestProfiler.hpp
Foundation/: CMakeLists.txt
Foundation/include/Foundation/: Allocator.hpp  Assert.hpp  Buffer.hpp  CommandBuffer.hpp  Foundation.hpp  Hash.hpp  Logger.hpp  Memory.hpp  PlatformDetection.hpp  Semaphore.hpp  Thread.hpp  Vector.hpp
Foundation/src/: Allocator.cpp  Buffer.cpp  Foundation.cpp  Hash.cpp  Logger.cpp  Semaphore.cpp  Thread.cpp  Vector.cpp
Nest/: CMakeLists.txt
Nest/include/: Nest.hpp
Nest/include/Nest/AMSTL/: LocalPath.hpp  Timer.hpp
Nest/include/Nest/Allocator/: Allocator.hpp  AllocatorInterface.hpp  DefaultAllocator.hpp  FreeListAllocator.hpp  Memory.hpp
Nest/include/Nest/Application/: Application.hpp  ApplicationStartupSettings.hpp  Layer.hpp
Nest/include/Nest/Assets/: AssetLoader.hpp  ShaderEnvelope.hpp
Nest/include/Nest/Audio/: AudioBase.hpp  MiniAudio.hpp
Nest/include/Nest/Base/: Base.hpp  UUID.hpp
Nest/include/Nest/Events/: Event.hpp  EventQueue.hpp  Key.hpp  KeyEvents.hpp  MouseEvents.hpp  TouchEvents.hpp  WindowEvents.hpp  WindowSizeObserver.hpp
Nest/include/Nest/Files/: Files.hpp
Nest/include/Nest/GameLogic/: Camera.hpp  Entity.hpp  Input.hpp  Level.hpp  NativeScript.hpp  World.hpp
Nest/include/Nest/ImGui/: Colors.hpp  FontAwesome.h  ImGuiFonts.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Nest/include/Nest/Logger/: Assert.hpp  Console.hpp  Logger.hpp
Nest/include/Nest/NestObjects/: Camera.hpp  GameObject.hpp  Layer.hpp  Level.hpp  World.cpp  World.hpp
Nest/include/Nest/NestRenderer/: IndexBuffer.cpp  IndexBuffer.hpp  Mesh.hpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Nest/include/Nest/Platform/: PlatformDetection.hpp
Nest/include/Nest/Renderer/: Base.hpp  CubeMap.hpp  ErrorsOpenGL.hpp  IndexBuffer.hpp  MeshData.hpp  Model3D.hpp  NaniteModel3D.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  RendererI.hpp  Shader.hpp  Texture.hpp  TextureBinding.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Viewport.hpp
Nest/include/Nest/SystemTools/: SystemTools.hpp
Nest/include/Nest/Window/: Cursor.hpp  Events.hpp  Key.hpp  Window.cpp  Window.hpp
Nest/res/: defaultShaders.hpp
Nest/res/Shaders/: fst.glsl  vst.glsl
Nest/src/Entity/: Level.hpp
Nest/src/Nest/Allocator/: FreeListAllocator.cpp
Nest/src/Nest/Application/: Application.cpp  Layer.cpp
Nest/src/Nest/Assets/: AssetLoader.cpp  ShaderEnvelope.cpp
Nest/src/Nest/Audio/: AudioBase.cpp  MiniAudio.cpp
Nest/src/Nest/Base/: UUID.cpp
Nest/src/Nest/Events/: EventQueue.cpp
Nest/src/Nest/Files/: Files.cpp
Nest/src/Nest/GameLogic/: Camera.cpp  Entity.cpp  Input.cpp  World.cpp
Nest/src/Nest/ImGui/: ImGui.cpp  ImGui.hpp  ImGuiFonts.cpp  ImGuiLayer.cpp  imgui_impl_bird.cpp  imgui_impl_bird.hpp  imgui_impl_nest.cpp  imgui_impl_nest.hpp  imgui_impl_nestren.cpp  imgui_impl_nestren.hpp
Nest/src/Nest/NestObjects/: Camera.cpp  World.cpp
Nest/src/Nest/NestRenderer/: IndexBuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Nest/src/Nest/Renderer/: CubeMap.cpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  Mesh.cpp  Model3D.cpp  NaniteModel3D.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Viewport.cpp
Nest/src/Nest/Window/: Events.cpp  (+1 more)
Nest/src/NestRenderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  VertexArray.cpp  VertexBufferLayout.hpp
Nest/src/Window/: Window.hpp
NestRen/: CMakeLists.txt
NestRen/include/NestRen/: Base.hpp  Config.hpp  GraphicsContext.hpp  NestRen.hpp  NestRenStates.hpp  PlatformData.hpp  RendererI.hpp  VertexBufferLayoutData.hpp
NestRen/src/NestRen/: GraphicsContext.hpp  HandleAllocator.hpp  NestRen.cpp  NestRen_p.hpp  PlatformData.cpp  RendererI.hpp
(+482 files in other folders)
